# librsync-py

./: .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  ffi_generator.py  header_cleaner.py  meson.build  noxfile.py  pyproject.toml
.github/workflows/: build-and-run-tests.yml  release.yml
src/librsync_py/: __init__.py  common.py  exceptions.py  librsync.py  statistics.py  stats.py  stream.py  whole.py
src/librsync_py/_internals/: __init__.py  common.py  job.py  wrappers.py
src/librsync_py/_pyext/: _librsync_py_extra.c  _librsync_py_extra.h
tests/: __init__.py  exceptions_test.py  misc.py  stream_test.py  whole_test.py
